[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project]
name = "reportkit-html"
version = "0.1.0"
description = "tiny html report generator (static, self-contained)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "bella" }]
keywords = ["report", "html", "static", "reportkit"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourname/reportkit-html"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reportkit_html"]

[tool.ruff]
line-length = 100
